dashboard optimization
