# api/handlers/v1/social.go
@@ -14,93 +14,6 @@ import (
 )
 
 // @Security      BearerAuth
-// @Summary 	  Create Social
-// @Description   This Api for creating a new social
-// @Tags 		  social
-// @Accept 		  json
-// @Produce 	  json
-// @Param 		  SocialCreate body models.SocialCreate true "SocialCreate Model"
-// @Success 	  201 {object} models.SocialResponse
-// @Failure 	  400 {object} models.Error
-// @Failure 	  401 {object} models.Error
-// @Failure 	  403 {object} models.Error
-// @Failure 	  500 {object} models.Error
-// @Router 		  /v1/social [POST]
-func (h *handlerV1) CreateSocial(ctx *gin.Context) {
-	var body models.SocialCreate
-
-	err := ctx.ShouldBindJSON(&body)
-	if err != nil {
-		ctx.JSON(http.StatusBadRequest, &models.Error{
-			Message: models.WrongInfoMessage,
-		})
-		log.Println("failed to bind json", err.Error())
-		return
-	}
-
-	duration, err := time.ParseDuration(h.cfg.CtxTimeout)
-	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, models.Error{
-			Message: models.InternalMessage,
-		})
-		log.Println("failed to parse timeout", err.Error())
-		return
-	}
-
-	ctxTime, cancel := context.WithTimeout(context.Background(), duration)
-	defer cancel()
-
-	response, err := h.storage.Social().Create(
-		ctxTime,
-		&repo.Social{
-			LocationName:  body.LocationName,
-			LocationUrl:   body.LocationUrl,
-			EducationName: body.EducationName,
-			EducationUrl:  body.EducationUrl,
-			TelegramName:  body.TelegramName,
-			TelegramUrl:   body.TelegramUrl,
-			TwitterName:   body.TwitterName,
-			TwitterUrl:    body.TwitterUrl,
-			InstagramName: body.InstagramName,
-			InstagramUrl:  body.InstagramUrl,
-			YoutubeName:   body.YoutubeName,
-			YoutubeUrl:    body.YoutubeUrl,
-			LinkedinName:  body.LinkedinName,
-			LinkedinUrl:   body.LinkedinUrl,
-			WebsiteName:   body.WebsiteName,
-			WebsiteUrl:    body.WebsiteUrl,
-			UserId:        body.UserId,
-		})
-	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, &models.Error{
-			Message: models.NotCreatedMessage,
-		})
-		log.Println("failed to create user", err.Error())
-		return
-	}
-
-	ctx.JSON(http.StatusCreated, &models.SocialResponse{
-		LocationName:  response.LocationName,
-		LocationUrl:   response.LocationUrl,
-		EducationName: response.EducationName,
-		EducationUrl:  response.EducationUrl,
-		TelegramName:  response.TelegramName,
-		TelegramUrl:   response.TelegramUrl,
-		TwitterName:   response.TwitterName,
-		TwitterUrl:    response.TwitterUrl,
-		InstagramName: response.InstagramName,
-		InstagramUrl:  response.InstagramUrl,
-		YoutubeName:   response.YoutubeName,
-		YoutubeUrl:    response.YoutubeUrl,
-		LinkedinName:  response.LinkedinName,
-		LinkedinUrl:   response.LinkedinUrl,
-		WebsiteName:   response.WebsiteName,
-		WebsiteUrl:    response.WebsiteUrl,
-		UserId:        response.UserId,
-	})
-}
-
-// @Security      BearerAuth
 // @Summary 	  Update Social
 // @Description   This Api for updating social
 // @Tags 		  social
