# api/handlers/v1/user.go
@@ -104,6 +104,96 @@ func (h *handlerV1) UpdateUser(ctx *gin.Context) {
 }
 
 // @Security      BearerAuth
+// @Summary 	  Update User
+// @Description   This Api for updating user
+// @Tags 		  users
+// @Accept 		  json
+// @Produce 	  json
+// @Param 		  User body models.UserUpdate true "Update User Model"
+// @Success 	  200 {object} models.UserResponse
+// @Failure 	  400 {object} models.Error
+// @Failure 	  401 {object} models.Error
+// @Failure 	  403 {object} models.Error
+// @Failure 	  500 {object} models.Error
+// @Router 		  /v1/userpassword [PUT]
+func (h *handlerV1) UpdateUserPassword(ctx *gin.Context) {
+	var body models.UserUpdate
+
+	err := ctx.ShouldBindJSON(&body)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, &models.Error{
+			Message: models.WrongInfoMessage,
+		})
+		log.Println("failed to bind json", err.Error())
+		return
+	}
+
+	duration, err := time.ParseDuration(h.cfg.CtxTimeout)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, models.Error{
+			Message: models.InternalMessage,
+		})
+		log.Println("failed to parse timeout", err.Error())
+		return
+	}
+
+	ctxTime, cancel := context.WithTimeout(context.Background(), duration)
+	defer cancel()
+
+	// Validate start
+	err = body.ValidateEmpity()
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, models.Error{
+			Message: models.WrongInfoMessage,
+		})
+		log.Println("Error validating user. id or username not given", err.Error())
+		return
+	}
+	// Validate end 
+
+	// Noexistense Start
+
+	responseUsername, err := h.storage.User().CheckField(
+		ctxTime, "username", body.Username)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, gin.H{
+			"error": "Error while getting exist fild",
+		})
+		log.Println("Error while getting exist fild: ", err.Error())
+		return
+	}
+	if responseUsername {
+		ctx.JSON(http.StatusConflict, gin.H{
+			"error": "Username already use",
+		})
+		log.Println("Username already use:", body.Username)
+		return
+	}
+	// Noexistense End
+
+	userModel := &repo.User{}
+	err = parsing.StructToStruct(&body, userModel)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, models.Error{
+			Message: models.InternalMessage,
+		})
+		log.Println("Error parsing struct to struct", err.Error())
+		return
+	}
+
+	response, err := h.storage.User().Update(ctxTime, userModel)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, &models.Error{
+			Message: models.NotUpdatedMessage,
+		})
+		log.Println("failed to update user", err.Error())
+		return
+	}
+
+	ctx.JSON(http.StatusOK, response)
+}
+
+// @Security      BearerAuth
 // @Summary 	  Delete User
 // @Description   This Api for deleting user
 // @Tags 		  users
